// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetailsFooter renders per snapshot when all card interactions are supported (ie, web) 1`] = `
<div
  className="foot"
>
  <CustomizedCommandBarButton
    checked={false}
    className="highlightButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "redEye",
      }
    }
    text="HighLight Buttons hidden"
  />
  <CustomizedCommandBarButton
    checked={false}
    className="kebabMenuButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "moreVertical",
      }
    }
    text=""
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot when only UserConfig-agnostic card interactions are supported (ie, electron) 1`] = `
<div
  className="foot"
>
  <CustomizedCommandBarButton
    checked={false}
    className="highlightButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "redEye",
      }
    }
    text="HighLight Buttons hidden"
  />
  <CustomizedCommandBarButton
    checked={false}
    className="kebabMenuButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "moreVertical",
      }
    }
    text=""
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="hidden" 1`] = `
<div
  className="foot"
>
  <CustomizedCommandBarButton
    checked={false}
    className="highlightButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "redEye",
      }
    }
    text="HighLight Buttons hidden"
  />
  <CustomizedCommandBarButton
    checked={false}
    className="kebabMenuButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "moreVertical",
      }
    }
    text=""
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="unavailable" 1`] = `
<div
  className="foot"
>
  <CustomizedCommandBarButton
    checked={false}
    className="highlightButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "redEye",
      }
    }
    text="HighLight Buttons unavailable"
  />
  <CustomizedCommandBarButton
    checked={false}
    className="kebabMenuButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "moreVertical",
      }
    }
    text=""
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="visible" 1`] = `
<div
  className="foot"
>
  <CustomizedCommandBarButton
    checked={false}
    className="highlightButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "redEye",
      }
    }
    text="HighLight Buttons visible"
  />
  <CustomizedCommandBarButton
    checked={false}
    className="kebabMenuButton"
    disabled={false}
    iconProps={
      Object {
        "iconName": "moreVertical",
      }
    }
    text=""
  />
</div>
`;
